Update generating 3D data from Paraview for the paper

--- a/Flux_Calibration/PaperLatex_ML/NeuralNetwork.tex
+++ b/Flux_Calibration/PaperLatex_ML/NeuralNetwork.tex
@@ -488,12 +488,30 @@ The same data can be visualized in a 3D environment, where the overall deformati
   \caption{Trajectory plot  for the potential combination of [0.3,0.09,.0.162,0.066]. The 3D data corresponds to the FE solution, and the point trajectory to the predicted displacement of point 1 using the best performing neural network architecture.}\label{fig:}
 \end{figure}
 
+\begin{figure}
+  \subfloat[Frame 1]{\includegraphics[width=0.45\textwidth]{Figures/NeuralNetworkStudy/Paraview_0078_0198_0006_00_FRAME1.png}}
+  \subfloat[Frame 2]{\includegraphics[width=0.45\textwidth]{Figures/NeuralNetworkStudy/Paraview_0078_0198_0006_00_FRAME2.png}}\\
+  \subfloat[Frame 3]{\includegraphics[width=0.45\textwidth]{Figures/NeuralNetworkStudy/Paraview_0078_0198_0006_00_FRAME3.png}}
+  \subfloat[Frame 4]{\includegraphics[width=0.45\textwidth]{Figures/NeuralNetworkStudy/Paraview_0078_0198_0006_00_FRAME4.png}}
+  \caption{Trajectory plot  for the potential combination of [0.078,0.198,.0.006,0.0]. The 3D data corresponds to the FE solution, and the point trajectory to the predicted displacement of point 1 using the best performing neural network architecture.}\label{fig:}
+\end{figure}
 
 
 
 \newpage
 
 \subsection{Second example: 20-electrode dielectric elastomer}
+
+\subsubsection{Data generation}
+
+The second example consists of a 20-electrode dielectric elastomer, whose electrodes are positioned in the top and middle surfaces. This configuration allows for more exotic deformation responses of the dielectric elastomers, including torsion, bending and a combination of both movements.
+
+
+\subsubsection{Training strategy}
+\subsubsection{Results}
+
+
+
 
 
 
