--- a/Flux_Calibration/PaperLatex_ML/ThermoMechanicsPaper.tex
+++ b/Flux_Calibration/PaperLatex_ML/ThermoMechanicsPaper.tex
@@ -53,23 +53,23 @@ A series of numerical examples will be presented in order to demonstrate the rob
 \input{section/00_intro}
 
 \section{Nonlinear continuum thermo-electro-mechanics}\label{sec:nonlinear continuum electromechanics}
-\input{section/01_kinematics}
+%\input{section/01_kinematics}
 
 \section{Constitutive equations in nonlinear thermo-electro-elasticity}\label{sec:constitutive equations}
-\input{section/02_constitutive_equations}
+%\input{section/02_constitutive_equations}
 
 
 
 
 \section{Finite Element implementation of nonlinear thermo-electro-mechanics}\label{sec:FEM residuals}
-\input{section/05_FEM_implementation}
+%\input{section/05_FEM_implementation}
 
 
-\input{section/06_numericalexamples}
+%\input{section/06_numericalexamples}
 \clearpage
 
 \section{Conclusions}\label{sec:conclusions}
-\input{section/07_conclusion}
+%\input{section/07_conclusion}
 \newpage
 \section{Neural Network postprocessing}\input{NeuralNetwork.tex}\label{sec:NN_cal}
 \section{Acknowledgements}\input{acknowledgement}
@@ -80,16 +80,16 @@ A series of numerical examples will be presented in order to demonstrate the rob
 \newpage
 \appendix
 \section{Entropy-based EM scheme}\label{sec:entropy-based formulation}
-\input{section/12_Appendix_entropy_based_formulation}
+%\input{section/12_Appendix_entropy_based_formulation}
 \newpage
-\section{Discrete derivatives of the internal energy}\label{sec:properties directionality}
+%\section{Discrete derivatives of the internal energy}\label{sec:properties directionality}
 \input{section/10_Appendix_truncation}
 \newpage
 \section{EM scheme in Reference \cite{Betsch2018Thermo}}\label{sec:Betsch formulation}
-\input{section/11_Appendix_Betsch_formulation}
+% \input{section/11_Appendix_Betsch_formulation}
 \newpage
 \section{Thermo-elastic constitutive model}\label{sec:constitutive model appendix}
-\input{section/13_Appendix_constitutive_model}
+% \input{section/13_Appendix_constitutive_model}
 \newpage
 %\section{Conservation properties in the presence of Dirichlet Boundary conditions}\label{sec:DirichletBCs}
 %\input{section/15_Appendix_DirichletBCs}
